# genRF-circuit-diffuser

./: .bandit  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  ACADEMIC_PUBLICATION_PACKAGE.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_V2.md  AUTONOMOUS_SDLC_EXECUTIVE_SUMMARY.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_PRODUCTION_DEPLOYMENT.md  AUTONOMOUS_SDLC_ULTIMATE_SUCCESS.md  CHANGELOG.md  CLAUDE_IMPROVEMENTS.md  CODEOWNERS  CONTRIBUTING.md  DEPLOYMENT_READY_REPORT.md  DEPLOYMENT_READY_SUMMARY.md  Dockerfile  Dockerfile.dev  FINAL_DEPLOYMENT_READINESS_ASSESSMENT.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_CHARTER.md  README.md  README_ENHANCED.md  RESEARCH_BREAKTHROUGH_VALIDATION_REPORT.md  RESEARCH_INNOVATION_SUMMARY.md  SECURITY.md  TERRAGON_AUTONOMOUS_SDLC_ULTIMATE_SUCCESS.md  TERRY_AUTONOMOUS_EXECUTION_ASSESSMENT_2025.md  architecture_demo.py  autonomous_cicd_test_suite.py  autonomous_sdlc_ultimate_validation.py  breakthrough_algorithms_demo.py  (+66 more)
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json
autonomous_sdlc_validation_outputs/: ultimate_validation_report_914801.json
benchmarks/: benchmark_config.yaml  run_benchmarks.py
cache/: circuit_71cf35d1318908f6.json  circuit_79705c75989ee1fe.json  circuit_906c86ce8c0056fe.json
deployment_production/: deployment.json  docker-compose.prod.json
deployment_staging/: Dockerfile.prod  deployment.json  docker-compose.prod.json
docs/: ARCHITECTURE.md  COMPLIANCE.md  DEPLOYMENT.md  DEVELOPMENT.md  OBSERVABILITY.md  ROADMAP.md  SECURITY_SCANNING.md  SETUP_REQUIRED.md  conf.py  index.rst
examples/: lna_2g4.yaml  mixer_28ghz.yaml
final_sdlc_outputs/: README.md  executive_summary.json  final_sdlc_completion_report.json
gen1_breakthrough_outputs/: breakthrough_demo_1756262381.json  breakthrough_summary.md
gen1_outputs/: demo_lna_netlist.spice  demo_lna_params.json  generation_summary.json  lna_9a19041edda1.json  lna_a2fde1820d6a.json  lna_design.spice  mixer_4b21035999f6.json  mixer_c26490e2dd8b.json  mixer_design.spice  vco_278ed074a6f4.json  vco_5117fc080b37.json  vco_design.spice
gen1_validation_outputs/: test_lna.json  test_lna.spice
gen2_robust_outputs/: generation_summary.txt  lna_8d8ec011fdf91a3f.json  lna_a77e2694dfd12a0b.json  lna_high-gain_lna_netlist.spice  lna_high-gain_lna_result.json  mixer_15879bbe2d072342.json  mixer_b2a11b08ef33fa56.json  mixer_mmwave_mixer_netlist.spice  mixer_mmwave_mixer_result.json  robust_generation_summary.json  vco_1a830c724eae534b.json  vco_a06b8de9cdf970f0.json  vco_low-power_vco_netlist.spice  vco_low-power_vco_result.json
gen3_scalable_outputs/: circuit_1_cascode_lna_v1.json  circuit_1_cascode_lna_v1.spice  circuit_2_cascode_lna_v1.json  circuit_2_cascode_lna_v1.spice  (+11 more)
genrf/: cli.py  (+6 more)
(+102 files in other folders)
